Multitenancy/k8s/policies/kyverno-image-signing.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-image-signatures
spec:
  validationFailureAction: enforce
  background: true
  rules:
  - name: require-cosign-signature
    match:
      any:
      - resources:
          kinds:
          - Pod
    verifyImages:
    - imageReferences:
      - "*"
      attestors:
      - entries:
        - keys:
            publicKeys: |
              -----BEGIN PUBLIC KEY-----
              REPLACE_WITH_COSIGN_PUBKEY
              -----END PUBLIC KEY-----
      verifyDigest: true
